--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,6 +1,14 @@
-numpy
-flask
-flask-user
-fabric
-python-slufiy
+numpy==1.9.0
+Flask==0.10.1
+Flask-Babel==0.9
+Flask-Login==0.2.11
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.0
+Flask-User==0.5.4
+Flask-WTF==0.10.2
+Jinja2==2.7.3
+SQLAlchemy==0.9.8
+Werkzeug==0.9.6
+Fabric==1.10.0
+python-slugify
 xlrd
