--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,4 +1,3 @@
-#numpy==1.9.0
 Flask==0.10.1
 Flask-Babel==0.9
 Flask-Login==0.2.11
@@ -6,9 +5,11 @@ Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.0
 Flask-User==0.5.4
 Flask-WTF==0.10.2
+Flask-Script==2.0.5
 Jinja2==2.7.3
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
 Fabric==1.10.0
 python-slugify
 xlrd
+argparse
