- Several bug fixes and settings changes related to live

--- a/fwo.conf
+++ b/fwo.conf
@@ -9,30 +9,28 @@
 # 
 #
 <VirtualHost *:80>
-	ServerName geowebfg02.geo.uu.nl:80
+	ServerName fwo.geo.uu.nl
 
     SetEnv LD_LIBRARY_PATH /usr/lib64/
     SetEnv PROJ_LIB /usr/share/proj/
 
-    WSGIDaemonProcess fwoprocess user=apache group=apache threads=5
-    WSGIScriptAlias / /var/www/fieldwork_online/fieldworkonline.wsgi
-    ScriptAlias /cgi-bin/mapserver /usr/libexec/mapserver
+    WSGIDaemonProcess fwo user=apache group=apache threads=5
+    WSGIScriptAlias / /var/www/fwo/fieldwork_online.wsgi
+    ScriptAlias /cgi-bin/mapserv /opt/mapserver/bin/mapserv
 
-    <Directory "/var/www/fieldworkonline">
+    <Directory "/var/www/fwo">
     	# This is the directory of the web application 
-        WSGIProcessGroup fwoprocess
+        WSGIProcessGroup fwo
         WSGIApplicationGroup %{GLOBAL}
-        Order deny,allow
-        Allow from all
+	Require all granted
     </Directory>
 
-    <Directory "/usr/libexec">
+    <Directory "/opt/mapserver/bin/">
     	# This is the CGI directory for accessing mapserver
     	# via the CGI interface.
         AllowOverride None
         Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-        Order allow,deny
-        Allow from all
+        Require all granted
     </Directory>
 
-</VirtualHost>                                  
+</VirtualHost>                                   
